@@ -1,5 +1,9 @@
 18 Mar 1999  Hippo
 
+	* fvwm/{fvwm2.1,builtins.c} WindowShadeAnimate takes a'p' suffix to
+	mean pixels for the step size.
+	* fvwm/{screen.h,{builtins,fvwm,session}.c} New GlobalOpt:
+	WindowShadeShrinks (with default WindowShadeScrolls) for oclock
 	* fvwm/{fvwm{2.1,.h},builtins.c} Patch from Neil Bird to add conditions
 	to the WindowId command.
 
